--- a/package.json
+++ b/package.json
@@ -25,7 +25,58 @@
     "url": "git+https://github.com/gormus/node-package-release-demo.git"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com",
+    "tag": "latest"
+  },
+  "release": {
+    "branches": [
+      "main",
+      "(v?(?:\\d*\\.)?(?:\\d*)\\.\\x)",
+      {
+        "name": "alpha",
+        "prerelease": true
+      },
+      {
+        "name": "beta",
+        "prerelease": true
+      }
+    ],
+    "plugins": [
+      [
+        "@semantic-release/commit-analyzer",
+        {
+          "preset": "eslint",
+          "parserOpts": {
+            "noteKeywords": [
+              "BREAKING CHANGE",
+              "BREAKING CHANGES",
+              "BREAKING"
+            ]
+          }
+        }
+      ],
+      "@semantic-release/github",
+      "@semantic-release/npm",
+      [
+        "@semantic-release/release-notes-generator",
+        {
+          "preset": "eslint",
+          "parserOpts": {
+            "noteKeywords": [
+              "BREAKING CHANGE",
+              "BREAKING CHANGES",
+              "BREAKING"
+            ]
+          },
+          "writerOpts": {
+            "commitsSort": [
+              "subject",
+              "scope"
+            ]
+          }
+        }
+      ]
+    ]
   },
   "engines": {
     "node": ">=22.0.0",
@@ -44,6 +95,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "conventional-changelog-eslint": "^6.0.0",
+    "semantic-release": "^24.2.2",
     "tsx": "^4.7.1"
   }
 }
