Upgrade: Update esbuild package
esbuild enables any website to send any requests to the development server and read the response
The earliest fixed version is `0.25.0`.

--- a/package.json
+++ b/package.json
@@ -96,7 +96,8 @@
   "devDependencies": {
     "@types/node": "^20.11.17",
     "conventional-changelog-eslint": "^6.0.0",
+    "esbuild": "^0.25.0",
     "semantic-release": "^24.2.2",
-    "tsx": "^4.7.1"
+    "tsx": "^4.19.2"
   }
 }
