--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,6 @@
+//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
+@gormus:registry=https://npm.pkg.github.com
+
 always-auth=true
 engine-strict=true
 access=restricted
