--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,20 +41,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.NPM_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx semantic-release
-
-      # - name: Determine version bump & create a release
-      #   id: release
-      #   uses: cycjimmy/semantic-release-action@v4
-      #   with:
-      #     semantic_version: 21.1.1
-      #     branches: |
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.NPM_TOKEN }}
-      #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      # - name: Publish package to GitHub Packages
-      #   if: steps.release.outputs.new_release_published == 'true'
-      #   run: npm publish --access=restricted
-      #   env:
-      #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
