--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -39,6 +39,8 @@ jobs:
         if: ${{ steps.release.outputs.release_created }}
         run: |
           echo "Creating additional tags for: ${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}.${{ steps.release.outputs.patch }}"
+          git config --global user.email "291025+github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "Release Please"
           git tag -d v${{ steps.release.outputs.major }} || true
           git tag -d v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} || true
           git push origin :v${{ steps.release.outputs.major }} || true
