--- a/package.json
+++ b/package.json
@@ -37,14 +37,21 @@
   },
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "commit": "commit",
+    "commitlint": "commitlint --edit",
+    "prepare": "husky"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
     "hono": "^4.7.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@commitlint/prompt-cli": "^19.8.0",
     "@types/node": "^20.11.17",
+    "husky": "^9.1.7",
     "tsx": "^4.19.2"
   }
 }
